Updated contact form functionality and improved SSL settings

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Martin Winebrenner Portfolio</title>
 
-    <!-- Favicon -->
+   
     <link rel="icon" href="assets/icons/favicon.png" type="image/png">
     <meta name="theme-color" content="#FF073A">
 
-    <!-- Stylesheet -->
+  
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/script.js" defer></script>
 </head>
 <body id="top">
 
-    <!-- Navigation Bar -->
+   
     <nav class="navbar">
         <div class="nav-logo">
             <img src="assets/icons/favicon.png" alt="MW Logo" class="logo-icon">
@@ -30,7 +30,7 @@
         </ul>
     </nav>
 
-    <!-- Hero Section -->
+
     <section class="hero" id="home">
         <div class="hero-container">
             <div class="hero-content">
@@ -47,10 +47,7 @@
         </div>
     </section>
 
-    <!-- Wave Transition -->
-    <div class="wave-divider"></div>
-
-    <!-- About Section -->
+  
     <section class="about" id="about">
         <h2>About Me</h2>
         <p>
@@ -60,10 +57,7 @@
         </p>
     </section>
 
-    <!-- Wave Transition -->
-    <div class="wave-divider"></div>
-
-    <!-- Skills Section -->
+   
     <section class="skills" id="skills">
         <h2>Skills</h2>
         <div class="skills-icons">
@@ -78,10 +72,7 @@
         </div>
     </section>
 
-    <!-- Wave Transition -->
-    <div class="wave-divider"></div>
-
-    <!-- Projects Section -->
+ 
     <section class="projects" id="projects">
         <h2>My Projects</h2>
         <div class="project-grid">
@@ -115,27 +106,21 @@
         </div>
     </section>
 
-    <!-- Wave Transition -->
-    <div class="wave-divider"></div>
-
-    <!-- Contact Section -->
+   
     <section class="contact" id="contact">
         <h2>Let’s Work Together</h2>
-        <form id="contact-form">
+        <form id="contact-form" action="https://formspree.io/f/xldjrdpk" method="POST">
             <input type="text" name="name" placeholder="Your Name" required>
             <input type="email" name="email" placeholder="Your Email" required>
             <textarea name="message" placeholder="Your Message" required></textarea>
             <button type="submit">Send Message</button>
         </form>
         <div id="confirmation-message" class="hidden">
-            <p>Message Sent Successfully!</p>
+            <p>✅ Message Sent Successfully!</p>
         </div>
     </section>
 
-    <!-- Wave Transition -->
-    <div class="wave-divider"></div>
-
-    <!-- Footer -->
+   
     <footer>
         <div class="footer-content">
             <p class="footer-text">Created by <span class="highlighted-name">Martin Winebrenner</span></p>
